@@ -80,10 +80,7 @@ setMethod("norm", signature(x = "dsyMatrix", type = "missing"),
           function(x, type, ...) .Call(dsyMatrix_norm, x, "O"),
           valueClass = "numeric")
 
-## Should this create the opposite storage format - i.e. "U" -> "L"
-## and vice-versa?
-## MM: I think yes, since the other part can be filled arbitrarily (wrongly)
-##WAS setMethod("t", signature(x = "dsyMatrix"), function(x) x)
+## *Should* create the opposite storage format:  "U" -> "L"  and vice-versa:
 setMethod("t", signature(x = "dsyMatrix"), t_trMatrix,
           valueClass = "dsyMatrix")
 
