@@ -21,7 +21,6 @@
 \alias{solve,dtpMatrix,matrix-method}
 \alias{solve,dtpMatrix,ddenseMatrix-method}
 \alias{t,dtpMatrix-method}
-\alias{unpack,dtpMatrix-method}
 \title{Packed triangular dense matrices}
 \description{The \code{"dtpMatrix"} class is the class of triangular,
   dense, numeric matrices in packed storage.  The \code{"dtrMatrix"}
@@ -70,7 +69,6 @@
     \item{solve}{\code{signature(a = "dtpMatrix", b = "missing")}: ... }
     \item{solve}{\code{signature(a = "dtpMatrix", b = "matrix")}: ... }
     \item{t}{\code{signature(x = "dtpMatrix")}: ... }
-    \item{unpack}{\code{signature(x = "dtpMatrix")}: ... }
   }
 }
 \seealso{
